force-app/main/default/objects/Error_Logger__c/Error_Logger__c.object-meta.xml
<CustomObject>
    <description>Error logging object that records all failed processes in the system, capturing the context, exception message, and relevant payload data for debugging and operational monitoring purposes.</description>
    <label>Error Logger</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Error Logger</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>