force-app/main/default/objects/Error_Logger__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Name of the class, method, or process where the error occurred</description>
    <inlineHelpText>Name of the class, method, or process where the error occurred</inlineHelpText>
    <label>Context</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>