force-app/main/default/objects/Error_Logger__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Categorization of errors</description>
    <inlineHelpText>Categorization of errors</inlineHelpText>
    <label>Error Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Error_Type</valueSetName>
    </valueSet>
</CustomField>