force-app/main/default/objects/Error_Logger__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Detailed exception message</description>
    <inlineHelpText>Detailed exception message</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>