force-app/main/default/objects/Error_Logger__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Serialized data or payload associated with the failed operation</description>
    <inlineHelpText>Serialized data or payload associated with the failed operation</inlineHelpText>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>